-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.7.3
-
None
-
4e4eef175 (dev), 44bf5566c (6.8), 2739e3219 (tqtc/lts-6.5)
Hi,
Q_ENUM gives compiler errors:
struct BaseStruct
{
Q_GADGET
public:
enum Enum
{
Val1
};
Q_ENUM(Enum)
struct Internal1
{
Q_GADGET
public:
enum Enum2
{
Val2
};
Q_ENUM(Enum2)
};
};
| For Gerrit Dashboard: QTBUG-130498 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 599654,5 | moc: handle nested structs with meta content | dev | qt/qtbase | Status: MERGED | +2 | +1 |
| 601670,2 | moc: handle nested structs with meta content | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
| 601676,2 | moc: handle nested structs with meta content | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |